# opencryptui

./: .gitignore  CMakeLists.txt  SECURITY.md
.github/workflows/: build-and-release.yml
docs/: PQ_README.md
include/: encryptionengine.h  hwkey.h  pq_hybrid.h  secure_string.h
include/logging/: secure_logger.h
scripts/: run_tests.sh  run_tests_mac.sh
src/: encryptionengine_chunks.cpp  encryptionengine_crypto.cpp  encryptionengine_diskops.cpp  encryptionengine_diskops_header.cpp  encryptionengine_keyderivation.cpp  encryptionengine_keyfile.cpp  encryptionengine_tables.cpp  encryptionengine_tamperevidence.cpp  encryptionworker.cpp  hwkey_linux.cpp  hwkey_macos.cpp  hwkey_stub.cpp  hwkey_windows.cpp  mainwindow.cpp  mainwindow_disk.cpp  mainwindow_fileops.cpp  mainwindow_menu.cpp  mainwindow_preferences.cpp  opensslprovider.cpp  opensslprovider_aead.cpp  opensslprovider_standard.cpp  pq_hybrid.cpp  pq_hybrid_stub.cpp  secure_string.cpp
src/logging/: secure_logger.cpp
tests/: screenshot_ui.cpp  test_benchmark.cpp  test_encryption_app.cpp  test_encryption_app.h  test_endtoend_blackbox.cpp  test_engine_cipher_matrix.cpp  test_engine_downgrade.cpp  test_engine_kdf.cpp  test_engine_keyfile.cpp  test_engine_per_chunk.cpp  test_engine_tamper.cpp  test_engine_v3_fallback.cpp  test_engine_v4_deniability.cpp  test_hwkey_stub.cpp  test_pq_hybrid.cpp  test_roundtrip.cpp  test_secure_logger_redaction.cpp  test_secure_string.cpp  test_ui_common.h  test_ui_encrypt_decrypt.cpp  test_ui_smoke.cpp  test_ui_tamper.cpp
tests/fuzz/: README.md  fuzz_chunk_decoder.cpp  fuzz_ocui_header.cpp  fuzz_signature_verifier.cpp  generate_corpus.sh
ui/: mainwindow.ui
